src/styles.global.scss
@import url("./fonts/tlficons/style.css");
@import url("https://use.typekit.net/cca8vjy.css");
*:focus {
   outline: none !important;
}

html {
   font-family: "museo-sans", "roboto", sans-serif;
   font-style: normal;
   font-weight: 300;
   color: #C4C3C7;
   overflow-y: scroll;
}

html, body, #root {
   height: 100%;
}

#root {
   display: flex;
   flex-direction: column;
}

#content {
   flex: 1 0 auto;
}

#footer {
   flex-shrink: 0;
}

.dead-blue {
   background-color: #151122 !important;
}

.dead-blue-text {
   color: #151122 !important;
}

.dead-blue-light {
   background-color: #8A8891 !important;
}

.dead-blue-light-text {
   color: #8A8891 !important;
}

.dead-blue-clear {
   background-color: #C4C3C7 !important;
}

.dead-blue-clear-text {
   color: #C4C3C7 !important;
}

.small {
   font-size: 0.9rem;
}

// $transitionTime: 1s;
// .fade-enter, .fade-home-enter {
//    position: fixed;
//    top: -60px;
//    left: 0;
//    right: 0;
//    opacity: 0;
//    z-index: 1;
// }
// 
// .fade-enter.fade-enter-active, .fade-home-enter.fade-home-enter-active {
//    top: 0;
//    opacity: 1;
//    transition: all $transitionTime;
// }
// 
// .fade-exit {
//    opacity: 1
// }
// 
// .fade-exit.fade-exit-active {
//    opacity: 0;
//    // top: -60px;
//    transition: all $transitionTime;
// }
// 
// .fade-home-exit {
//    position: fixed;
//    z-index: 0;
//    top: 0;
//    left: 0;
//    right: 0;
//    opacity: 1;
//    z-index: 1;
//    pointer-events: none;
// }
// 
// .fade-home-exit.fade-home-exit-active {
//    opacity: 0;
//    top: -60px;
//    transition: all $transitionTime;
// }

